Added and realised /books/search endpoint
